--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   },
   "dependencies": {
     "babel-runtime": "6.11.6",
+    "cookie": "^0.3.1",
+    "cross-fetch": "^2.2.0",
+    "debug": "^3.1.0",
     "lodash": "4.14.0",
     "request": "2.74.0"
   },
